[package]
name = "quest-sys"
version = "0.1.0"
edition = "2024"
links = "QuEST"
description = "Low-level Rust bindings to the QuEST C++ quantum simulation toolkit"
license = "MIT"
repository = "https://github.com/eessmann/quest-rs"
readme = "README.md"
keywords = ["quantum", "simulation", "ffi", "bindings"]
categories = ["external-ffi-bindings", "science"]
build = "build.rs"

[dependencies]
cxx = {version = "1.0.148", features = ["std", "alloc", "c++20"]}

[build-dependencies]
cmake = "0.1.54"
cxx-build = { version = "1.0.148"}
pkg-config = "0.3.32"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
# Feature flags for controlling QuEST configuration
openmp = []
mpi = []
cuda = []
hip = []
cuquantum = ["cuda"]
# Enable local QuEST source build (if available)
build-from-source = []
# Default to OpenMP for parallel execution
default = ["openmp"]
