[package]
name = "quest-sys"
version = "0.1.0"
edition = "2024"
links = "QuEST"
description = "Low-level Rust bindings to the QuEST C++ quantum simulation toolkit"
license = "MIT"
repository = "https://github.com/eessmann/quest-rs"
readme = "README.md"
keywords = ["quantum", "simulation", "ffi", "bindings"]
categories = ["external-ffi-bindings", "science"]
build = "build.rs"

[dependencies]
cxx.workspace = true

[build-dependencies]
cmake = "0.1.54"
cxx-build = { version = "1.0.148"}
pkg-config = "0.3.32"
serde.workspace = true
serde_json.workspace = true

[features]
# Feature flags for controlling QuEST configuration
openmp = []
mpi = []
cuda = []
hip = []
cuquantum = ["cuda"]
# Enable local QuEST source build (if available)
build-from-source = []
# Default to OpenMP for parallel execution
default = ["openmp"]

[dev-dependencies]
approx = "0.5.1"
libc = "0.2.171"

[[example]]
name = "min_example"
path = "examples/min_example.rs"